--- a/.github/workflows/deploy-solution.yml
+++ b/.github/workflows/deploy-solution.yml
@@ -13,7 +13,7 @@ jobs:
     runs-on: windows-latest
     environment: production
     steps:
-      - uses: actions/upload-artifact@v2
+      - uses: actions/download-artifact@v2
         with:
           workflow: pack-solution.yml
           name: packed-solution
