--- a/.github/workflows/deploy-solution.yml
+++ b/.github/workflows/deploy-solution.yml
@@ -21,5 +21,5 @@ jobs:
         with:
           environment-url: https://org1c501192.crm.dynamics.com/
           user-name: techiesurabhi@5lz7w2.onmicrosoft.com
-          password-secret: Passcode@jan2024
+          password-secret: njjj
           solution-file: TestProject_managed.zip
